--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Redux App</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.auth0.com/blog/react-js/react.png" />
   </head>
   <body>
     <div id="app"></div>
